Profile fixes - no functional input on tablet + trimmed white spaces on calendar - tablet

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -912,7 +912,7 @@ ul.products li {
 .iconLeft{margin-left: -10px;color:darkgrey;}
 .padd40px{
   padding-left: 40px;
-  @media(max-width: 768px){
+  @media(max-width: 1277px){
     padding-left: 0;
   }
 }
